--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BatteryChargeNotifier"
         tools:targetApi="31">
-        <receiver android:name=".ChargingReceiver"
+        <receiver android:name=".BatteryLevelReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BATTERY_CHANGED"/>
@@ -22,7 +22,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.BatteryChargeNotifier">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
