注册充电事件，去掉一些警告

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Mon Dec 09 19:55:57 CST 2024
-sdk.dir=C\:\\Users\\Ted\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\lasto\\AppData\\Local\\Android\\Sdk
