chore: 清理构建和IDE生成的文件
删除 .gradle 和 .idea 目录中的缓存、锁文件和配置，这些文件不应纳入版本控制。
同时更新 .gitignore 以更全面地排除这些生成文件和本地环境配置。

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # Android Studio-specific files
 .idea/
+**/.idea/
 *.iml
 *.ipr
 *.iws
 
 # Gradle-specific files
 .gradle/
+**/.gradle/
 build/
 **/build/
-.gradle/
-local.properties
 
 # Log files
 *.log
@@ -21,13 +21,7 @@ ehthumbs.db
 Desktop.ini
 
 # Dependency directories
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/caches/
-/.idea/modules/
-/.idea/libraries/
-/.idea/.name
+out/
 *.sublime-workspace
 *.sublime-project
 *.suo
@@ -38,6 +32,7 @@ Desktop.ini
 
 # Keystore files (if any)
 *.jks
+*.keystore
 
 # Files that might be generated at runtime
 captures/
@@ -53,9 +48,14 @@ output-metadata.json
 
 # Exclude generated files
 .cxx/
+.kotlin/
 *.apk
 *.aar
 *.hprof
+*.aab
+*.ap_
+*.dex
+*.pyc
 
 # Local environment configuration
 local.properties
