--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,15 @@
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
 # org.gradle.parallel=true
 #Tue Apr 02 10:07:10 CST 2024
+android.builtInKotlin=false
+android.defaults.buildfeatures.resvalues=true
+android.dependency.useConstraints=true
+android.enableAppCompileTimeRClass=false
 android.enableJetifier=true
+android.newDsl=false
+android.r8.optimizedResourceShrinking=false
+android.r8.strictFullModeForKeepRules=false
+android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
+android.uniquePackageNames=false
 android.useAndroidX=true
+android.usesSdkInManifest.disallowed=false
