--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ android.sdk.defaultTargetSdkToCompileSdkIfUnset=false
 android.uniquePackageNames=false
 android.useAndroidX=true
 android.usesSdkInManifest.disallowed=false
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
